Make sure the d3 tooltip is always readable

--- a/src/onegov.election_day/onegov/election_day/theme/styles/election_day.scss
+++ b/src/onegov.election_day/onegov/election_day/theme/styles/election_day.scss
@@ -101,7 +101,7 @@ table {
 */
 
 .d3-tip {
-    background: rgba(0, 0, 0, .1);
+    background: $white-smoke;
     border-radius: 2px;
     font-size: .8rem;
     padding: 12px;
